--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -418,7 +418,7 @@ a:hover {
     transform: translateY(-50%);
 }
 
-.banner-icons {
+#banner .banner-icons {
     position: relative;
     font-size: 25px;
     padding: 2px 12px;
@@ -427,7 +427,7 @@ a:hover {
 }
 
 
-.banner-icons:before {
+#banner .banner-icons:before {
     content: '';
     width: 100%;
     height: 1px;
@@ -440,7 +440,7 @@ a:hover {
 
 }
 
-.banner-icons:after {
+#banner .banner-icons:after {
     content: '';
     width: 100%;
     height: 1px;
@@ -452,7 +452,7 @@ a:hover {
     transition: var(--transition-fast);
 }
 
-.banner-icons a:before {
+#banner .banner-icons a:before {
     content: '';
     width: 1px;
     height: 100%;
@@ -464,7 +464,7 @@ a:hover {
     transition: var(--transition-fast);
 }
 
-.banner-icons a:after {
+#banner .banner-icons a:after {
     content: '';
     width: 1px;
     height: 100%;
@@ -476,12 +476,12 @@ a:hover {
     transition: var(--transition-fast);
 }
 
-.banner-icons a {
+#banner .banner-icons a {
     color: var(--text-clr);
     transition: var(--transition-fast);
 }
 
-.banner-arrow-l {
+#banner .banner-arrow-l {
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
@@ -489,7 +489,7 @@ a:hover {
     left: 2%;
 }
 
-.banner-arrow-r {
+#banner .banner-arrow-r {
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
@@ -497,14 +497,14 @@ a:hover {
     right: 2%;
 }
 
-.banner-icons:hover:after,
-.banner-icons:hover:before,
-.banner-icons:hover a:after,
-.banner-icons:hover a:before {
+#banner .banner-icons:hover:after,
+#banner .banner-icons:hover:before,
+#banner .banner-icons:hover a:after,
+#banner .banner-icons:hover a:before {
     background: var(--hlt_clr);
 }
 
-.banner-icons:hover a {
+#banner .banner-icons:hover a {
     color: var(--hlt_clr);
 
 }
@@ -796,3 +796,201 @@ a:hover {
     color: var(--text-clr);
 }
 /* counter section ends here */
+
+/* our blog section starts here */
+#ourblog {
+    margin-top: 100px;
+    margin-bottom: 60px;
+}
+.blog-img {
+    position: relative;
+    clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 100%);
+    transition: var(--transition-fast);
+    z-index: 1;
+    top: 95px;
+}
+.blog-overlay {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 0%;
+    opacity: 0;
+    background: rgba(0, 0, 0, 0.521);
+    transition: var(--transition-fast);
+}
+.blog-overlay {
+    display: grid;
+    place-items: center;
+}
+.blog-overlay a {
+    color: var(--secondary-clr);
+    background: var(--hlt_clr);
+    height: 40px;
+    width: 40px;
+    border-radius: 50%;
+    display: grid;
+    place-items: center;
+    border: 1px solid transparent;
+    transition: var(--transition-fast);
+}
+.blog-overlay a:hover {
+    background: transparent;
+    border-color: var(--hlt_clr);
+    color: var(--hlt_clr);
+}
+.blog-text {
+    border: 1px solid #ddd;
+    padding: 30px 25px;
+    position: relative;
+    top: -250px;
+    opacity: 0;
+    padding-top: 95px;
+    border-top: transparent;
+    transition: var(--transition-fast);
+}
+.blog-text h4 {
+    font-size: 18px;
+    color: var(--secondary-clr);
+    font-weight: 400;
+    text-transform: capitalize;
+}
+.blog-text ul li a {
+    color: #555;
+    font-size: 14px;
+    font-weight: 400;
+}
+.blog-text p {
+    font-size: 14px;
+    color: #555;
+    font-weight: 400;
+    padding: 15px 0;
+}
+.blog-button a {
+    text-transform: uppercase;
+    padding: 15px 20px;
+    display: inline-block;
+    font-size: 16px;
+    position: relative;
+    transition: var(--transition-fast);
+    background-color: var(--hlt_clr);
+    color: var(--secondary-clr);
+    font-weight: 500;
+    border: 1px solid transparent;
+}
+.blog-button a:hover {
+    background-color: #f7f7f7;
+    border-color: var(--hlt_clr);
+    color: var(--hlt_clr);
+}
+.blog-content.slick-center .blog-overlay {
+    height: 100%;
+    opacity: 1;
+}
+.blog-content.slick-center .blog-img {
+    position: relative;
+    clip-path: polygon(0% 0%, 100% 0%, 100% 80%, 0% 100%);
+    top: 0;
+}
+.blog-content.slick-center .blog-text {
+    top: -73px;
+    opacity: 1;
+
+}
+.blog-content {
+    margin: 10px;
+}
+#ourblog {
+    position: relative;
+}
+#ourblog .our-icons {
+    position: relative;
+    font-size: 25px;
+    padding: 2px 12px;
+    z-index: 90;
+    cursor: pointer;
+}
+
+
+#ourblog .our-icons:before {
+    content: '';
+    width: 100%;
+    height: 1px;
+    background: var(--secondary-clr);
+    position: absolute;
+    left: 0;
+    top: 0;
+    transform: scale(1.4, 2);
+    transition: var(--transition-fast);
+
+}
+
+#ourblog .our-icons:after {
+    content: '';
+    width: 100%;
+    height: 1px;
+    background: var(--secondary-clr);
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    transform: scale(1.4, 2);
+    transition: var(--transition-fast);
+}
+
+#ourblog .our-icons a:before {
+    content: '';
+    width: 1px;
+    height: 100%;
+    background: var(--secondary-clr);
+    position: absolute;
+    left: 0;
+    top: 0;
+    transform: scale(2, 1.4);
+    transition: var(--transition-fast);
+}
+
+#ourblog .our-icons a:after {
+    content: '';
+    width: 1px;
+    height: 100%;
+    background: var(--secondary-clr);
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    transform: scale(2, 1.4);
+    transition: var(--transition-fast);
+}
+
+#ourblog .our-icons a {
+    color: var(--secondary-clr);
+    transition: var(--transition-fast);
+}
+
+#ourblog .our-arrow-l {
+    position: absolute;
+    top: 36%;
+    transform: translateY(-36%);
+    z-index: 90;
+    left: 2%;
+}
+
+#ourblog .our-arrow-r {
+    position: absolute;
+    top: 36%;
+    transform: translateY(-36%);
+    z-index: 90;
+    right: 2%;
+}
+#ourblog .our-icons:hover:after,
+#ourblog .our-icons:hover:before,
+#ourblog .our-icons:hover a:after,
+#ourblog .our-icons:hover a:before {
+    background: var(--hlt_clr);
+}
+
+#ourblog .our-icons:hover a {
+    color: var(--hlt_clr);
+
+}
+
+/* our blog section ends here */
