--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2231,10 +2231,111 @@ margin-top: 10px;
     line-height: 50px;
     border-radius: 50%;
 }
-
-
 /* list view section ends here */
 
-
-
 /****************************** blog list view page page css ends here ******************************/
+
+/****************************** blog details view page page css ends here ******************************/
+.blogspot-icons {
+    display: flex;
+    justify-content: space-between;
+}
+.blogspot-description h5 {
+    color: var(--secondary-clr);
+    font-size: 18px;
+    text-transform: capitalize;
+    margin: 10px 0;
+}
+.blogspot-icons a  {
+    font-size: 13px;
+    text-transform: capitalize;
+    padding-left: 6px;
+    color: #555;
+    transition: var(--transition-fast);
+}
+.blogspot-icons a:hover {
+    color: var(--hlt_clr);
+}
+.blogspot-description p {
+    color: #555;
+    line-height: 24px;
+    font-size: 13px;
+    padding: 30px 0;
+}
+.bordered-p p {
+    background-color: #f1f1f1;
+    padding: 26px 0 26px 30px;
+    border-left: 3px solid var(--hlt_clr);
+    font-style: italic;
+    color: #555555;
+    font-size: 14px;
+}
+.bottom-comment {
+    color: var(--secondary-clr);
+    font-size: 18px;
+    text-transform: capitalize;
+    font-weight: 500;
+    display: block;
+    margin: 10px 0;
+}
+.blospot-comments {
+    display: flex;
+    padding: 25px 0;
+    border-top: 1px solid #353535;
+}
+.blogspot-right h4 {
+    color: var(--secondary-clr);
+    font-size: 18px;
+    text-transform: capitalize;
+}
+.blogspot-right h4 span {
+    float: right;
+    color: #555;
+    font-size: 14px;
+    font-weight: 400;
+}
+.blogspot-right p {
+    color: #555;
+    line-height: 24px;
+    font-size: 13px;
+    padding: 30px 0;
+}
+.blogspot-right {
+    padding-left: 30px;
+}
+.blogspot-right a {
+    color: var(--secondary-clr);
+    font-size: 14px;
+    transition: var(--transition-fast);
+}
+.blogspot-right a:hover {
+    color: var(--hlt_clr);
+}
+
+.leave-a-reply input,
+.leave-a-reply textarea {
+    color: #777;
+    text-transform: capitalize;
+    resize: none;
+    border: 1px solid #000;
+    border-radius: 0px;
+    font-size: 13px;
+    margin-bottom: 15px;
+}
+.leave-a-reply input:focus,
+.leave-a-reply textarea:focus {
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 8px rgba(199, 154, 29, 0.4);
+    border-color: #000;
+}
+.leave-a-reply h4 {
+    color: #353535;
+    font-size: 18px;
+    text-transform: capitalize;
+    font-weight: 500;
+    margin: 10px 0;
+}
+.leave-a-reply .blog-button-bottom {
+    margin-top: 25px;
+}
+
+/****************************** blog details view page page css ends here ******************************/
