--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1592,10 +1592,14 @@ margin-top: 10px;
 }
 #about-bg span a {
     color: var(--hlt_clr);
+    font-size: 14px;
 }
 .about-bg-arrow {
     display: inline-block;
     padding: 0 5px;
+}
+.about-bg-arrow i {
+    font-size: 9px;
 }
 /* about us bg section ends here */
 
@@ -2235,6 +2239,8 @@ margin-top: 10px;
 
 /****************************** blog list view page page css ends here ******************************/
 
+
+
 /****************************** blog details view page page css ends here ******************************/
 .blogspot-icons {
     display: flex;
@@ -2337,5 +2343,246 @@ margin-top: 10px;
 .leave-a-reply .blog-button-bottom {
     margin-top: 25px;
 }
-
 /****************************** blog details view page page css ends here ******************************/
+
+
+
+/****************************** error page page page css starts here ******************************/
+/* error section starts here */
+#error {
+        background: #d6f2e7;
+        background-size: cover;
+        position: relative;
+        height: 1025px;
+}
+.error-content {
+    position: relative;
+}
+.error-text {
+    position: absolute;
+    position: absolute;
+    left: 43%;
+    top: 47%;
+    transform: translateX(-43%);
+}
+.error-footer #footer {
+    margin-top: 0;
+}
+.error-text h1 {
+    font-size: 200px;
+    color: var(--secondary-clr);
+    line-height: 200px;
+    position: relative;
+}
+.error-text h1:before {
+    content: '';
+    height: 51px;
+    width: 17px;
+    background-color: #e6b900;
+    border-radius: 4px;
+    position: absolute;
+    top: 0;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+/* error section ends here */
+/****************************** error page page page css ends here ******************************/
+
+
+/****************************** comming soon page page css starts here ******************************/
+#comming-soon {
+    background: url(../images/coming_soon.jpg) center center no-repeat;
+    background-size: cover;
+    position: relative;
+    z-index: 1;
+    padding: 80px 0;
+}
+#comming-soon:before {
+    content: '';
+    position: absolute;
+    inset: 0;
+    background: rgba(0, 0, 0, 0.548);
+    z-index: -1;
+}
+.comming-soon-heading h2 {
+    font-weight: 500;
+    color: var(--hlt_clr);
+    font-size: 35px;
+    margin-bottom: 20px;
+}
+.comming-soon-heading h2 span {
+    color: var(--text-clr);
+}
+
+.comming-soon-heading p {
+    font-size: 16px;
+    color: var(--text-clr);
+}
+.comming-soon-heading {
+    padding-top: 80px;
+    padding-bottom: 50px;
+}
+.comming-soon-timer {
+    color: var(--text-clr);
+    height: 170px;
+    width: 170px;
+    position: relative;
+    padding: 10px;
+    margin: 0px 54px;
+    transform: rotate(135deg);
+}
+.comming-soon-timer:before {
+    position: absolute;
+    height: 100%;
+    width: calc(100% + 40px);
+    left: -19px;
+    top: 0;
+    border-bottom: 1px solid var(--text-clr);
+    border-top: 1px solid var(--text-clr);
+    content: '';
+}
+.comming-soon-timer:after {
+    height: calc(100% + 40px);
+    width: 100%;
+    position: absolute;
+    right: 0;
+    bottom: -19px;
+    border-left: 1px solid var(--text-clr);
+    border-right: 1px solid var(--text-clr);
+    content: '';
+}
+
+  
+.timer-items {
+    border: 1px solid var(--text-clr);
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.timer-items h2 {
+    font-size: 35px;
+    font-weight: 700;
+}
+.timer-items p {
+    font-size: 18px;
+    font-weight: 400;
+}
+.timers {
+    transform: rotate(-135deg);
+
+}
+.comming-main {
+    margin: 100px 0;
+}
+.subscribe h4 {
+    font-size: 20px;
+    font-weight: 400;
+    color: #fefefe;
+    margin-bottom: 25px;
+}
+.subscribe .input-group {
+    width: 560px;
+    margin: 0 auto;
+}
+.subscribe .input-group input {
+    background-color: transparent;
+    height: 56px;
+    color: #f1f1f1;
+    font-size: 14px;
+}
+.subscribe .input-group span {
+    background: var(--hlt_clr);
+    color: var(--secondary-clr);
+    cursor: pointer;
+    border-style: none;
+    font-weight: 500;
+    border: 1px solid transparent;
+    padding: 15px 38px;
+    font-size: 14px;
+}
+.subscribe input:focus {
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 8px rgba(254, 192, 19, 0.69);
+    border-color: transparent;
+}
+.comming-soon-icons ul li a i {
+    color: var(--text-clr);
+    font-size: 16px;
+}
+.comming-soon-icons li {
+    display: inline-block;
+    position: relative;
+    margin: 0 8px;
+}
+.comming-soon-icons li:before {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 1px;
+    background: var(--text-clr);
+    top: 0;
+    left: 0;
+    transition: var(--transition-fast);
+    transform: scaleX(0);
+}
+.comming-soon-icons li:after {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 1px;
+    background: var(--text-clr);
+    bottom: 0;
+    left: 0;
+    transition: var(--transition-fast);
+    transform: scaleX(0);
+}
+.comming-soon-icons ul li a:before {
+    content: '';
+    position: absolute;
+    width: 1px;
+    height: 100%;
+    background: var(--text-clr);
+    left: 0;
+    transition: var(--transition-fast);
+    transform: scaleY(0);
+}
+.comming-soon-icons ul li a:after {
+    content: '';
+    position: absolute;
+    width: 1px;
+    height: 100%;
+    background: var(--text-clr);
+    right: 0;
+    transition: var(--transition-fast);
+    transform: scaleY(0);
+}
+
+
+.comming-soon-icons ul li a {
+    display: block;
+    text-align: center;
+    height: 40px;
+    width: 40px;
+    line-height: 40px;
+    position: relative;
+}
+.comming-soon-icons {
+    margin-top: 50px;
+}
+.comming-soon-icons li:hover:before,
+.comming-soon-icons li:hover:after {
+    transform: scaleX(1.3);
+}
+.comming-soon-icons li a:hover:before,
+.comming-soon-icons li a:hover:after {
+    transform: scaleY(1.3);
+}
+
+
+
+
+/****************************** comming soon view page page css ends here ******************************/
